Fix background color bug in dark mode on wide screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,7 @@ body {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
-  background-color: #F6F5FF;
+  background-color: var(--background-color);
 }
 
 .visually-hidden {
@@ -100,7 +100,7 @@ body {
 }
 
 .wrapper {
-  max-width: 2200px;
+  max-width: 2300px;
   min-height: 100%;
   margin: 0 auto;
   background-color: var(--background-color);
